мини профиль на всех страницах где надо

--- a/templates/mini-profile.html.twig
+++ b/templates/mini-profile.html.twig
@@ -13,17 +13,17 @@
         <div class="max-score">
             <p class="statistics__text">максимум очков</p>
             <div class="line"></div>
-            <p>{{player.maxScore ?? 'her'}}</p>
+            <p>{{player.maxScore ?? '0'}}</p>
         </div>
         <div class="count-win">
             <p class="statistics__text">всего побед</p>
             <div class="line"></div>
-            <p>{{player.winCount ?? 'her'}}</p>
+            <p>{{player.winCount ?? '0'}}</p>
         </div>
         <div class="count-game">
             <p class="statistics__text">всего игр</p>
             <div class="line"></div>
-            <p>{{player.gameCount ?? 'her'}}</p>
+            <p>{{player.gameCount ?? '0'}}</p>
         </div>               
     </div>
 </div>
