создал профиль, можно перейти на страницу О НАС на наши профили

--- a/templates/about.html.twig
+++ b/templates/about.html.twig
@@ -21,7 +21,7 @@
 			</a>
 			<div class="links">
 				<div class="link">
-					<a href="/game">
+					<a href="/profile/Слава">
 						<div class="link__text">
 							<h1 class="link__title">
 								ростислав глизерин
@@ -33,7 +33,7 @@
 					</a>
 				</div>
 				<div class="link">
-					<a href="/game">
+					<a href="/profile/Иван">
 						<div class="link__text">
 							<h1 class="link__title">
 								иван березин
@@ -45,7 +45,7 @@
 					</a>
 				</div>
 				<div class="link">
-					<a href="/game">
+					<a href="/profile/Елисей">
 						<div class="link__text">
 							<h1 class="link__title">
 								елисей карамышев
@@ -57,7 +57,7 @@
 					</a>
 				</div>
 				<div class="link">
-					<a href="/game">
+					<a href="/profile/Дима">
 						<div class="link__text">
 							<h1 class="link__title">
 								дмитрий беляев
@@ -69,7 +69,7 @@
 					</a>
 				</div>
 				<div class="link">
-					<a href="/game">
+					<a href="/profile/Никита">
 						<div class="link__text">
 							<h1 class="link__title">
 								никита дудинов
