--- a/templates/profile.html.twig
+++ b/templates/profile.html.twig
@@ -1,8 +1,65 @@
-{{ login }}
-<hr>
-{{ player.maxScore }}<br>
-{{ player.averageScore }}<br>
-{{ player.totalScore }}<br>
-{{ player.gameCount }}<br>
-{{ player.winCount }}<br>
-<a href="/logout">ВЫЙТИ</a
+{% extends "base.html.twig" %}
+
+{% block title %}Profile{% endblock %}
+{% block style %}<link rel="stylesheet" href="/css/profile.css"/>{% endblock %}
+{% block content %}
+<body class="body">
+    <header class="header">
+        <img src="/images/settings.png" alt="settings" class="header__settings">
+        <a href="/logout">
+            <img src="/images/exit-logo.svg" alt="exit" class="header__exit">
+        </a>
+    </header>
+    <main class="main">
+        <div class="description-user">
+            <img class="user-avatar" src="/images/human.jpeg" alt="avatar">
+            <div class="general-results">
+                <h1 class="username">{{ login ?? 'Славянин'}}</h1>
+                <div class="single-game">
+                    <p class="count-solo-game">Всего одиночных игр :</p>
+                    <p class="count-solo-game">{{ player.gameCount }}</p>
+                </div>
+                <div class="multiplayer-game">
+                    <p class="count-multiplayer-game">Всего онлайн игр :</p>
+                    <p class="count-multiplayer-game">10</p>
+                    <p class="count-win-game">↪ выиграно из них {{ player.winCount }}</p>
+                </div>
+            </div>
+        </div>
+        <div class="list-score">
+            <div class="score">
+                <p class="score__title">Последний результат</p>
+                <p class="score__description">В последней игре ты набрад 1000 очков</p>
+            </div>
+            <div class="score">
+                <p class="score__title">Максимальный результат в одиночной игре</p>
+                <p class="score__description">За самую лучшую игру в одиночном режиме ты набрал {{ player.maxScore }} очков</p>
+            </div>
+            <div class="score">
+                <p class="score__title">Максимальный результат в онлайн игре</p>
+                <p class="score__description">За самую лучшую игру в мультиплеерном режиме ты набрал 10000 очков</p>
+            </div>
+            <div class="score">
+                <p class="score__title">Средний результат</p>
+                <p class="score__description">В среднем за игру ты набираешт по {{ player.averageScore }} очков</p>
+            </div>
+            <div class="score">
+                <p class="score__title">Общий результат</p>
+                <p class="score__description">За все игры ты заработал {{ player.totalScore }} очков</p>
+            </div>
+            <div class="score">
+                <p class="score__title">Режим "40 ЛИНИЙ"</p>
+                <p class="score__description">Быстрее всего ты прощел этот режим за 1 минуту 45 секунд</p>
+            </div>
+            <div class="score">
+                <p class="score__title">Режим "БЛИЦ"</p>
+                <p class="score__description">Самое большое количество очков в этом режиме 3300</p>
+            </div>
+            <div class="score">
+                <p class="score__title">Режим "БОСС"</p>
+                <p class="score__description">Ты смог победить босса 17 раз</p>
+            </div>
+        </div>
+    </main>
+</body>
+{% endblock%}
