--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -33,7 +33,7 @@
     display: flex;
     padding-top: 50px;
     justify-content: space-between;
-    align-scores: center;
+    align-items: center;
 }
 
 .description-user {
@@ -42,7 +42,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-scores: center;
+    align-items: center;
 }
 
 .user-avatar {
