--- a/templates/select-solo-mode.html.twig
+++ b/templates/select-solo-mode.html.twig
@@ -86,6 +86,19 @@
 						</p>
 					</div>
 				</a>
+				<a href="/select_koop_mode" class="link koop link_with-image">
+					<div class="img-placeholder">
+						<img src="/images/bot.png" alt="koop" class="link__image">
+					</div>
+					<div class="link__text">
+						<h1 class="link__title koop__title">
+							кооперативный режим
+						</h1>
+						<p class="link__subtitle koop__subtitle">
+							играй с другом на одном поле и соберите тетрис вместе
+						</p>
+					</div>
+				</a>
 			</div>
 		</div>
 	</div>
