styles and multi over

--- a/public/css/game-over.css
+++ b/public/css/game-over.css
@@ -5,6 +5,9 @@
     font-weight: 400;
     color: #9CCA95;
     text-transform: uppercase;
+    text-decoration: none;
+    user-select: none;
+    border: none;
 }
 
 .bg {
