--- a/public/css/lobby.css
+++ b/public/css/lobby.css
@@ -1,13 +1,14 @@
 * {
     padding: 0;
     margin: 0;
-
     font-family: "Russo One", sans-serif;
     font-weight: 400;
     font-size: 32px;
     color: #fff;
     text-transform: uppercase;
     text-decoration: none;
+    user-select: none;
+    border: none;
 }
 
 .bg {
@@ -19,13 +20,15 @@
 
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: end;
     padding: 25px;
-
 }
 
 .logo {
-    margin-left: 212px;
+    
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
 }
 
 .profile {
@@ -71,12 +74,16 @@
     display: flex;
     padding: 20px;
     align-items: center;
-    justify-content: space-around;
+    justify-content: start;
 }
 
 .settings {
     max-width: 1050px;
     width: 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
 }
 
 .settings__text {
@@ -223,12 +230,27 @@
     border-left: 3px solid #392e40;
     border-bottom: 3px solid #0a080b;
 }
-
+.start-game-panel {
+    position: absolute;
+    bottom: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(to bottom, #2e1c49 0, #221437 100%);
+    clip-path: polygon(0 100%, 10% 0, 90% 0, 100% 100%);
+    width: 100%;
+    height: 60px;
+}
+.start-game {
+    color: #b190e2;
+    background: none;
+}
 .item__title {
     color: #dac8e7;
 }
 
 .item__subtitle {
+    font-size: 16px;
     color: #7c6b88;
 }
 
