--- a/public/css/register-style.css
+++ b/public/css/register-style.css
@@ -2,7 +2,11 @@
     margin: 0;
     padding: 0;
     font-family: "Russo One", sans-serif;
+    font-weight: 400;
+    color: #fff;
     text-decoration: none;
+    user-select: none;
+    border: none;
     text-transform: uppercase;
 }
 
