--- a/public/css/select.css
+++ b/public/css/select.css
@@ -1,10 +1,12 @@
 * {
     padding: 0;
     margin: 0;
-    text-decoration: none;
     font-family: "Russo One", sans-serif;
     font-weight: 400;
+    color: #fff;
+    text-decoration: none;
     user-select: none;
+    border: none;
     text-transform: uppercase;
 }
 
@@ -22,16 +24,20 @@
 .settings {
     width: 40px;
     height: 40px;
+    display: none;
 }
 
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: end;
     padding: 25px;
 }
 
 .logo {
-    margin-left: 212px;
+    
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
 }
 
 .profile {
