--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -8,102 +8,106 @@
 	<script src="/js/lobby.js"></script>
 {% endblock %}
 {% block content %}
-<body>
-     <div class="bg">
-        <div class="header">
-            <img src="/images/settings.png" alt="settings" class="set">
-            <img src="/images/logo.png" alt="logo" class="logo">
-            <div class="profile">
-                <p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
-                <p class="profile__playerId">{{user.playerId ?? 'her'}}</p>
-                <input class="player_id" type="hidden" value="{{ user.playerId }}" >
-                <img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
-            </div>
-        </div>
-        <div class="main">
-            <div class="players">
-                <div class="list-players">
-                </div>                
-                <p class="lobby-link">http://127.0.0.1:8000/lobby</p>
-            </div>
-            <div class="settings">
-                <div class="settings__size">
-                    <p class="settings__text">размер поля: </p>
-                    <div class="setting">
-                        <div class="wrapper-setting">
-                           <p id="size" class="settings__text-size">крестьянин</p>
-                           <img class="triangle" src="/images/triangle.png">
-                        </div>
-                        <hr class="line-settings">
-                    </div>
-                </div>
-                <div class="settings__music">
-                    <p class="settings__text">музыка: </p>
-                    <div class="setting">
-                        <div class="wrapper-setting">
-                           <p id="music" class="settings__text-music">лунный вальс</p>
-                           <img class="triangle" src="/images/triangle.png">
-                        </div>
-                        <hr class="line-settings">
-                    </div>
-                </div>
-                <div class="settings__complexity">
-                    <p class="settings__text">сложность: </p>
-                    <div class="setting">
-                        <div class="wrapper-setting">
-                          <p id="difficulty" class="settings__text-difficulty">средний</p>
-                           <img class="triangle" src="/images/triangle.png">
-                        </div>
-                        <hr class="line-settings">
-                    </div>
-                </div>
-                <div class="settings__background">
-                    <p class="settings__text">задний фон: </p>
-                    <div class="setting">
-                        <div class="wrapper-setting">
-                           <p id="bg" class="settings__text-bg">ispring</p>
-                           <img class="triangle" src="/images/triangle.png">
-                        </div>
-                        <hr class="line-settings">
-                    </div>
-                </div>
-            </div>
-            <button class="start-game">начать игру</button>
-        </div>
-        <div class="user-profile">
-            <div class="user-profile__header">
-                <div class="user-profile__player">
-                    <img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
-                    <p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
-                </div>
-                <div class="user-profile__exit">
-                    <button class="exit">Exit</button>
-                    <a class="full-profile" href="/">Profile</a>
-                </div>  
-            </div>
-            <div class="statistics">
-                <div class="max-score">
-                    <p class="statistics__text">максимум очков</p>
-                    <div class="line"></div>
-                    <p>14100</p>
-                </div>
-                <div class="count-win">
-                    <p class="statistics__text">всего побед</p>
-                    <div class="line"></div>
-                    <p>11</p>
-                </div>
-                <div class="count-game">
-                    <p class="statistics__text">всего игр</p>
-                    <div class="line"></div>
-                    <p>2</p>
-                </div>               
-            </div>
-        </div>
-        <div class="list-settings">
-            <div class="menu">
-            </div>
-        </div>
-    </div>
-</body>
- <script src="/js/lobby-socket.js"></script>
+	<body>
+		<div class="bg">
+			<div class="header">
+				<img src="/images/settings.png" alt="settings" class="set">
+				<img src="/images/logo.png" alt="logo" class="logo">
+				<div class="profile">
+					<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
+					<p class="profile__playerId">{{user.playerId ?? 'her'}}</p>
+					<input class="player_id" type="hidden" value="{{ user.playerId }}">
+					<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
+				</div>
+			</div>
+			<div class="main">
+				<div class="players">
+					<div class="list-players"></div>
+					<p class="lobby-link">http://127.0.0.1:8000/lobby</p>
+				</div>
+				<div class="settings">
+					<div class="settings__size">
+						<p class="settings__text">размер поля:
+						</p>
+						<div class="setting">
+							<div class="wrapper-setting">
+								<p id="size" class="settings__text-size">крестьянин</p>
+								<img class="triangle" src="/images/triangle.png">
+							</div>
+							<hr class="line-settings">
+						</div>
+					</div>
+					<div class="settings__music">
+						<p class="settings__text">музыка:
+						</p>
+						<div class="setting">
+							<div class="wrapper-setting">
+								<p id="music" class="settings__text-music">лунный вальс</p>
+								<img class="triangle" src="/images/triangle.png">
+							</div>
+							<hr class="line-settings">
+						</div>
+					</div>
+					<div class="settings__complexity">
+						<p class="settings__text">сложность:
+						</p>
+						<div class="setting">
+							<div class="wrapper-setting">
+								<p id="difficulty" class="settings__text-difficulty">средний</p>
+								<img class="triangle" src="/images/triangle.png">
+							</div>
+							<hr class="line-settings">
+						</div>
+					</div>
+					<div class="settings__background">
+						<p class="settings__text">задний фон:
+						</p>
+						<div class="setting">
+							<div class="wrapper-setting">
+								<p id="bg" class="settings__text-bg">ispring</p>
+								<img class="triangle" src="/images/triangle.png">
+							</div>
+							<hr class="line-settings">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="start-game-panel">
+				<button class="start-game">начать игру</button>
+			</div>
+			<div class="user-profile">
+				<div class="user-profile__header">
+					<div class="user-profile__player">
+						<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
+						<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
+					</div>
+					<div class="user-profile__exit">
+						<button class="exit">Exit</button>
+						<a class="full-profile" href="/">Profile</a>
+					</div>
+				</div>
+				<div class="statistics">
+					<div class="max-score">
+						<p class="statistics__text">максимум очков</p>
+						<div class="line"></div>
+						<p>14100</p>
+					</div>
+					<div class="count-win">
+						<p class="statistics__text">всего побед</p>
+						<div class="line"></div>
+						<p>11</p>
+					</div>
+					<div class="count-game">
+						<p class="statistics__text">всего игр</p>
+						<div class="line"></div>
+						<p>2</p>
+					</div>
+				</div>
+			</div>
+			<div class="list-settings">
+				<div class="menu"></div>
+			</div>
+		</div>
+	</body>
+	<script src="/js/lobby-socket.js"></script>
 {% endblock %}
