--- a/templates/select-solo-mode.html.twig
+++ b/templates/select-solo-mode.html.twig
@@ -88,7 +88,7 @@
 				</a>
 				<a href="/select_koop_mode" class="link koop link_with-image">
 					<div class="img-placeholder">
-						<img src="/images/bot.png" alt="koop" class="link__image">
+						<img src="/images/koop.png" alt="koop" class="link__image">
 					</div>
 					<div class="link__text">
 						<h1 class="link__title koop__title">
