--- a/templates/select-classic-mode.html.twig
+++ b/templates/select-classic-mode.html.twig
@@ -32,7 +32,7 @@
 				</div>
 			</div>
 			<div class="select">
-				<a href="/menu">
+				<a href="/select_solo_mode">
 					<div class="back">
 						<h1 class="back__button">
 							назад
