--- a/public/css/list_lobby.css
+++ b/public/css/list_lobby.css
@@ -139,13 +139,12 @@ input {
     background: #222;
     font-family: "Russo One", sans-serif;
     font-size: 32px;
-    margin-bottom: 19px;
 }
 
 .join-button
 {
     width: 450px;
-    padding: 15px 0;
+    padding: 15px 0 15px 0;
     text-align: center;
     background-color: #1E48FF;
     color: #FFFFFF;
@@ -155,7 +154,21 @@ input {
     cursor: pointer;
     border: none;
 }
+.joinn {
+   position: absolute;
+   left: 50%;
+   display: flex;
+   flex-direction: row;
+   transform: translate(-50%, 0);
 
+}
+.row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+
+}
 .back {
     display: flex;
     align-items: start;
