--- a/templates/multiplayer.html.twig
+++ b/templates/multiplayer.html.twig
@@ -45,7 +45,7 @@
                     <canvas class="other-field"></canvas>
                     <p class="player__score">200</p>
                 </div>
-                <div class="other-player">
+                {# <div class="other-player">
                     <p class="player__username"></p>
                     <canvas class="other-field"></canvas>
                     <p class="player__score">200</p>
@@ -54,7 +54,7 @@
                     <p class="player__username"></p>
                     <canvas class="other-field"></canvas>
                     <p class="player__score">200</p>
-                </div>
+                </div> #}
             </div>
         </div>
     </main>
