с димой сделали белеберду по тетрису

--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -49,11 +49,13 @@
 			<p class="instruction__text">пауза - клавиша "з"</p>
 		</div>
 	</body>
+	<script src="/js/game/field.js"></script>
+	<script src="/js/game/figure.js"></script>
 	<script src="/js/game/player.js"></script>
 	<script src="/js/game/ui.js"></script>
-	<script src="/js/game/figures.js"></script>
-	<script src="/js/game/images.js"></script>
+	<script src="/js/static/figures.js"></script>
+	<script src="/js/static/images.js"></script>
 	<script src="/js/game/game.js"></script>
-	<script src="/js/game/init-game.js"></script>
-	<script src="/js/game/game-end.js"></script>
+	{# <script src="/js/game/init-game.js"></script> #}
+	{# <script src="/js/game/game-end.js"></script> #}
 {% endblock %}
