переписали с ваней тетрис

--- a/templates/game-over.html.twig
+++ b/templates/game-over.html.twig
@@ -5,7 +5,7 @@
 {% block style %}<link rel="stylesheet" href="/css/game-over.css"/>
 {% endblock %}
 {% block script %}
-	<script src="/js/game/game-over.js"></script>
+	<script src="/js/game/game_over.js"></script>
 {% endblock %}
 {% block content %}
 	<div class="bg">
@@ -22,7 +22,7 @@
 						Ваш браузер не поддерживает встроенные видео :(
 					</video>
 				</div>
-				<a class="link again">
+				<a href = "/game" class="link again">
 					<h1 class="link__header">сыграть заново</h1>
 				</a>
 				<a href="/menu" class="link">
