предварительно реализовали мультиплеер(вроде work work work)

--- a/templates/select-classic-mode.html.twig
+++ b/templates/select-classic-mode.html.twig
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" href="/css/select.css"/><link rel="stylesheet" href="/css/mini-profile.css"/>
 {% endblock %}
 {% block script %}
-	<script src="/js/game/game-mode.js"></script><script src="/js/mini-profile.js"></script>
+	<script src="/js/game_modes/game_mode_size.js"></script>
+	<script src="/js/mini-profile.js"></script>
 {% endblock %}
 {% block content %}
 	<body>
