--- a/templates/select-solo-mode.html.twig
+++ b/templates/select-solo-mode.html.twig
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" href="/css/select.css"/><link rel="stylesheet" href="/css/mini-profile.css"/>
 {% endblock %}
 {% block script %}
-	<script src="/js/game/game-mode-solo.js"></script><script src="/js/mini-profile.js"></script>
+	<script src="/js/game_modes/game_mode_singleplayer.js"></script>
+	<script src="/js/mini-profile.js"></script>
 {% endblock %}
 {% block content %}
 	<div class="bg bg_dark">
