переделали с Ваней мультиплеер

--- a/templates/multiplayer.html.twig
+++ b/templates/multiplayer.html.twig
@@ -65,7 +65,7 @@
 <script src="/js/game/field.js"></script>
 <script src="/js/game/player.js"></script>
 <script src="/js/game/ui.js"></script>
-{# <script src="/js/game/game.js"></script> #}
+<script src="/js/game/game.js"></script>
 <script src="/js/game/game_end.js"></script>
 <script src="/js/multiplayer/multiplayer_game.js"></script>
 {% endblock %}
