--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -56,6 +56,6 @@
 	<script src="/js/game/player.js"></script>
 	<script src="/js/game/ui.js"></script>
 	<script src="/js/game/game.js"></script>
-	{# <script src="/js/game/init-game.js"></script> #}
+	<script src="/js/game/game_init.js"></script>
 	<script src="/js/game/game_end.js"></script>
 {% endblock %}
