--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -14,6 +14,10 @@
     background-size: cover;
 }
 
+#image-input{
+    display: none
+}
+
 .header {
     display: flex;
     justify-content: space-between;
