сделал так, чтобы, при перезагрузке сохранялась игра

--- a/templates/multiplayer.html.twig
+++ b/templates/multiplayer.html.twig
@@ -37,24 +37,10 @@
                         <p class="title-level">уровень:</p>
                         <p class="game__level"></p>
                     </div>
+                    <button class="start_game">Начать игру</button>
                 </div>
             </div>
             <div class="palyers-list">
-                {# <div class="other-player">
-                    <p class="player__username"></p>
-                    <canvas class="other-field"></canvas>
-                    <p class="game__score">200</p>
-                </div>
-                <div class="other-player">
-                    <p class="player__username"></p>
-                    <canvas class="other-field"></canvas>
-                    <p class="game__score">200</p>
-                </div>
-                <div class="other-player">
-                    <p class="player__username"></p>
-                    <canvas class="other-field"></canvas>
-                    <p class="game__score">200</p>
-                </div> #}
             </div>
         </div>
     </main>
