--- a/templates/game-over-multi.html.twig
+++ b/templates/game-over-multi.html.twig
@@ -2,74 +2,53 @@
 
 {% block title %}Multiplayer Game Over
 {% endblock %}
-{% block style %}<link rel="stylesheet" href="/css/game-over-multi.css"/>
-{% endblock %}
-{% block script %}
-	<script src="/js/game/game-over.js"></script>
+{% block style %}<link rel="stylesheet" href="/css/game-over-multi.css"/><link rel="stylesheet" href="/css/mini-profile.css"/>
 {% endblock %}
 {% block content %}
 	<div class="bg">
 		<div class="header">
 			<img src="/images/settings.png" alt="settings" class="settings">
 			<img src="/images/logo.png" alt="logo" class="logo">
+			<input class="player_id" type="hidden" value="{{ user.playerId}}">
 			<div class="profile">
-				<a href="{{(user.login ?? null) ? path("profile", {login: user.login}) : path('register') }}">
+				{% if not user or not user.login %}
+					<a href="{{ path('register') }}">
+						<div class="profile">
+							<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
+							<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
+						</div>
+					</a>
+				{% else %}
 					<div class="profile">
 						<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
 						<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
 					</div>
-				</a>
+				{% endif %}
 			</div>
 		</div>
 		<div class="results-placeholder">
 			<div class="results">
 				<div class="results__header">
-					<h1 class="results__title">№2</h1>
+					<h1 class="results__title">№0</h1>
 					<div class="results__time">
-						<p class="time__text">время выживания</p>
-						<p class="time__value">1:20</p>
+						<p class="time__text">Количество Очков</p>
+						<p class="time__value">0</p>
 					</div>
 				</div>
 				<div class="players">
-					<div class="player">
-						<div class="player__number">
-							<p class="player__simbol">№</p>
-							<p class="player__place">1</p>
-						</div>
-						<div class="player__info">
-							<p class="player__name">славянин</p>
-							<p class="player__time">выжил</p>
-						</div>
-					</div>
-					<div class="player">
-						<div class="player__number">
-							<p class="player__simbol">№</p>
-							<p class="player__place">2</p>
-						</div>
-						<div class="player__info">
-							<p class="player__name">славa</p>
-							<p class="player__time">10:28</p>
-						</div>
-					</div>
-					<div class="player">
-						<div class="player__number">
-							<p class="player__simbol">№</p>
-							<p class="player__place">3</p>
-						</div>
-						<div class="player__info">
-							<p class="player__name">славянин132121221</p>
-							<p class="player__time">0:01</p>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
-		<a>
+		<a class="back__link">
 			<div class="back">
 				<h1 class="back__button">
 					сыграть заново
 				</h1>
 			</div>
 		</a>
+		{% include 'mini-profile.html.twig' %}	
 	</div>
+</body>
+<script src="/js/game/game_over.js"></script>
+<script src="/js/mini-profile.js"></script>
 {% endblock %}
