--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -2,7 +2,9 @@
 
 {% block title %}Tetris
 {% endblock %}
-{% block style %}<link rel="stylesheet" href="/css/game.css"/>
+{% block style %}
+	<link rel="stylesheet" href="/css/game.css"/>
+	<link rel="stylesheet" href="/css/swipe-events.css"/>
 {% endblock %}
 {% block content %}
 	<body>
@@ -58,4 +60,5 @@
 	<script src="/js/game/game.js"></script>
 	<script src="/js/game/game_init.js"></script>
 	<script src="/js/game/game_end.js"></script>
+	<script src="/js/swipe_events.js"></script>
 {% endblock %}
