доделал таблицу лидеров и раскидал по папкам js

--- a/templates/menu/leaderboard.html.twig
+++ b/templates/menu/leaderboard.html.twig
@@ -28,11 +28,28 @@
 			</div>
 		</div>
 		<div class="menu">
-			
+			<div class="max__score">
+				<div class="menu__title">
+					<h1>max score</h1>
+					<h2>топ игроков по максимальному счету</h2>
+				</div>
+			</div>
+			<div class="max__win">
+				<div class="menu__title">
+					<h1>max win</h1>
+					<h2>топ игроков по максимальному количеству побед</h2>
+				</div>
+			</div>
+			<div class="max__average">
+				<div class="menu__title">
+					<h1>max average score</h1>
+					<h2>топ игроков по максимальному  среднему счету</h2>
+				</div>
+			</div>
 		</div>	
 	</div>
 	{% include 'mini-profile.html.twig' %}
 </body>
-<script src="/js/leaderboard.js"></script>
-<script src="/js/mini-profile.js"></script>
+<script src="/js/menu/leaderboard.js"></script>
+<script src="/js/menu/mini-profile.js"></script>
 {% endblock %}
