--- a/templates/menu/profile.html.twig
+++ b/templates/menu/profile.html.twig
@@ -70,5 +70,5 @@
         </div>
     </main>
 </body>
-<script src="/js/profile.js"></script>
+<script src="/js/menu/profile.js"></script>
 {% endblock%}
