--- a/templates/multiplayer/game-over-multi.html.twig
+++ b/templates/multiplayer/game-over-multi.html.twig
@@ -50,5 +50,5 @@
 	</div>
 </body>
 <script src="/js/game/game_over.js"></script>
-<script src="/js/mini-profile.js"></script>
+<script src="/js/menu/mini-profile.js"></script>
 {% endblock %}
