--- a/templates/multiplayer/list_lobby.html.twig
+++ b/templates/multiplayer/list_lobby.html.twig
@@ -46,7 +46,7 @@
 				<div class="menu"></div>
 				{% include 'mini-profile.html.twig' %}
 			</div>
-			<script src="/js/list_lobby.js"></script>
-			<script src="/js/list_lobby-socket.js"></script>
-			<script src="/js/mini-profile.js"></script>
+			<script src="/js/menu/list_lobby.js"></script>
+			<script src="/js/multiplayer/list_lobby-socket.js"></script>
+			<script src="/js/menu/mini-profile.js"></script>
 		{% endblock %}
