--- a/templates/multiplayer/lobby.html.twig
+++ b/templates/multiplayer/lobby.html.twig
@@ -76,6 +76,6 @@
 			<button class="start-game">начать игру</button>
 		</div>
 	</body>
-	<script src="/js/lobby.js"></script>
-	<script src="/js/lobby-socket.js"></script>
+	<script src="/js/menu/lobby.js"></script>
+	<script src="/js/multiplayer/lobby-socket.js"></script>
 {% endblock %}
