--- a/templates/select_modes/select-multiplayer-mode.html.twig
+++ b/templates/select_modes/select-multiplayer-mode.html.twig
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="/css/select.css"/><link rel="stylesheet" href="/css/mini-profile.css"/>
 {% endblock %}
 {% block script %}
-	<script src="/js/mini-profile.js"></script>
+	<script src="/js/menu/mini-profile.js"></script>
 {% endblock %}
 {% block content %}
 	<div class="bg bg_dark">
