--- a/templates/select_modes/select-classic-mode.html.twig
+++ b/templates/select_modes/select-classic-mode.html.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 {% block script %}
 	<script src="/js/game_modes/game_mode_size.js"></script>
-	<script src="/js/mini-profile.js"></script>
+	<script src="/js/menu/mini-profile.js"></script>
 {% endblock %}
 {% block content %}
 	<body>
