--- a/templates/select_modes/select-solo-mode.html.twig
+++ b/templates/select_modes/select-solo-mode.html.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 {% block script %}
 	<script src="/js/game_modes/game_mode_singleplayer.js"></script>
-	<script src="/js/mini-profile.js"></script>
+	<script src="/js/menu/mini-profile.js"></script>
 {% endblock %}
 {% block content %}
 	<div class="bg bg_dark">
