поправил большую часть твиг шаблонов

--- a/templates/error.html.twig
+++ b/templates/error.html.twig
@@ -1,7 +1,9 @@
 {% extends "base.html.twig" %}
-{% block title %}Error Page
+{% block title %}
+    Error Page
 {% endblock %}
-{% block style %}<link rel="stylesheet" href="/css/error.css"/>
+{% block style %}
+    <link rel="stylesheet" href="/css/error.css"/>
 {% endblock %}
 {% block content %}
 	<div class="bg">
