--- a/templates/game/game-over.html.twig
+++ b/templates/game/game-over.html.twig
@@ -1,8 +1,10 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Classic Game Over
+{% block title %}
+	Classic Game Over
 {% endblock %}
-{% block style %}<link rel="stylesheet" href="/css/game-over.css"/>
+{% block style %}
+	<link rel="stylesheet" href="/css/game-over.css"/>
 {% endblock %}
 {% block script %}
 	<script src="/js/game/game_over.js"></script>
@@ -29,7 +31,6 @@
 					<h1 class="link__header">вернуться в меню</h1>
 				</a>
 			</div>
-
 		</div>
 	</div>
 {% endblock %}
