--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -7,7 +7,7 @@
     text-transform: uppercase;
 }
 
-.body {
+body {
     height: 100vh;
     width: 100vw;
     background: url(/images/bg.png) no-repeat;
