--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,8 @@
 		<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Welcome!
+			{% block title %}
+				Welcome!
 			{% endblock %}
 		</title>
 		{% block style %}{% endblock %}
