--- a/templates/multiplayer/game-over-multi.html.twig
+++ b/templates/multiplayer/game-over-multi.html.twig
@@ -1,8 +1,10 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Multiplayer Game Over
+{% block title %}
+	Multiplayer Game Over
 {% endblock %}
-{% block style %}<link rel="stylesheet" href="/css/game-over-multi.css"/><link rel="stylesheet" href="/css/mini-profile.css"/>
+{% block style %}
+	<link rel="stylesheet" href="/css/game-over-multi.css"/><link rel="stylesheet" href="/css/mini-profile.css"/>
 {% endblock %}
 {% block content %}
 	<div class="bg">
@@ -48,7 +50,6 @@
 		</a>
 		{% include 'mini-profile.html.twig' %}	
 	</div>
-</body>
-<script src="/js/game/game_over.js"></script>
-<script src="/js/menu/mini-profile.js"></script>
+	<script src="/js/game/game_over.js"></script>
+	<script src="/js/menu/mini-profile.js"></script>
 {% endblock %}
