--- a/templates/multiplayer/list_lobby.html.twig
+++ b/templates/multiplayer/list_lobby.html.twig
@@ -1,8 +1,10 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Menu
+{% block title %}
+	Menu
 {% endblock %}
-{% block style %}<link rel="stylesheet" href="/css/list_lobby.css"/><link rel="stylesheet" href="/css/mini-profile.css"/>
+{% block style %}
+	<link rel="stylesheet" href="/css/list_lobby.css"/><link rel="stylesheet" href="/css/mini-profile.css"/>
 {% endblock %}
 {% block content %}
 	<div class="bg">
@@ -43,10 +45,10 @@
 			</div>
 		</div>
 		<h1 class="list-title">Список лобби<h1>
-				<div class="menu"></div>
-				{% include 'mini-profile.html.twig' %}
-			</div>
-			<script src="/js/menu/list_lobby.js"></script>
-			<script src="/js/multiplayer/list_lobby-socket.js"></script>
-			<script src="/js/menu/mini-profile.js"></script>
-		{% endblock %}
+		<div class="menu"></div>
+		{% include 'mini-profile.html.twig' %}
+	</div>
+	<script src="/js/menu/list_lobby.js"></script>
+	<script src="/js/multiplayer/list_lobby-socket.js"></script>
+	<script src="/js/menu/mini-profile.js"></script>
+{% endblock %}
