--- a/templates/multiplayer/multiplayer.html.twig
+++ b/templates/multiplayer/multiplayer.html.twig
@@ -1,12 +1,13 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Multiplayer
+{% block title %}
+    Multiplayer
 {% endblock %}
-{% block style %}<link rel="stylesheet" href="/css/multiplayer.css"/>
+{% block style %}
+    <link rel="stylesheet" href="/css/multiplayer.css"/>
 {% endblock %}
 {% block content %}
-<body>
-<main class="main">
+    <main class="main">
         <img class="logo" src="/images/logo.png" alt="logo">
         <div class="wrapper-game">
             <div id="{{ user.playerId }}" class="wrapper-main-field">
@@ -43,14 +44,13 @@
             </div>
         </div>
     </main>
-</body>
-<script src="/js/static/images.js"></script>
-<script src="/js/static/figures.js"></script>
-<script src="/js/game/figure.js"></script>
-<script src="/js/game/field.js"></script>
-<script src="/js/game/player.js"></script>
-<script src="/js/game/ui.js"></script>
-<script src="/js/game/game.js"></script>
-<script src="/js/game/game_end.js"></script>
-<script src="/js/multiplayer/multiplayer_game.js"></script>
+    <script src="/js/static/images.js"></script>
+    <script src="/js/static/figures.js"></script>
+    <script src="/js/game/figure.js"></script>
+    <script src="/js/game/field.js"></script>
+    <script src="/js/game/player.js"></script>
+    <script src="/js/game/ui.js"></script>
+    <script src="/js/game/game.js"></script>
+    <script src="/js/game/game_end.js"></script>
+    <script src="/js/multiplayer/multiplayer_game.js"></script>
 {% endblock %}
