--- a/templates/game/game-over.html.twig
+++ b/templates/game/game-over.html.twig
@@ -24,11 +24,11 @@
 						Ваш браузер не поддерживает встроенные видео :(
 					</video>
 				</div>
-				<a href = "/game" class="link again">
-					<h1 class="link__header">сыграть заново</h1>
+				<a href="/game" class="link again">
+					<p class="link__header">сыграть заново</p>
 				</a>
 				<a href="/menu" class="link">
-					<h1 class="link__header">вернуться в меню</h1>
+					<p class="link__header">вернуться в меню</p>
 				</a>
 			</div>
 		</div>
