--- a/templates/game_modes/l40.html.twig
+++ b/templates/game_modes/l40.html.twig
@@ -30,18 +30,15 @@
 			</div>
 			<div class="score-wrapper">
 				<div class="score-value-wrapper">
-					<p class="title-score">счет:
-					</p>
+					<p class="title-score">счет:</p>
 					<p class="game__score">0</p>
 				</div>
 				<div class="score-value-wrapper">
-					<p class="title-level">уровень:
-					</p>
+					<p class="title-level">уровень:</p>
 					<p class="game__level">0</p>
 				</div>
 				<div class="score-value-wrapper">
-					<p class="title-lines">количество линий:
-					</p>
+					<p class="title-lines">количество линий:</p>
 					<p class="game__lines">0</p>
 				</div>
 			</div>
