--- a/templates/menu/menu.html.twig
+++ b/templates/menu/menu.html.twig
@@ -4,7 +4,7 @@
 	Menu
 {% endblock %}
 {% block style %}
-	<link rel="stylesheet" href="/css/select.css"/><link rel="stylesheet" href="/css/mini-profile.css"/>
+	<link rel="stylesheet" href="/css/select.css"/>
 {% endblock %}
 {% block content %}
 	<div class="bg">
@@ -27,9 +27,9 @@
 						<img src="/images/solo.png" alt="solo" class="link__image">
 					</div>
 					<div class="link__text">
-						<h1 class="link__title solo__title">
+						<p class="link__title solo__title">
 							однопользовательский режим
-						</h1>
+						</p>
 						<p class="link__subtitle solo__subtitle">
 							превзойди себя и поставь новый рекорд
 						</p>
@@ -40,9 +40,9 @@
 						<img src="/images/multiplayer.png" alt="multiplayer" class="link__image">
 					</div>
 					<div class="link__text">
-						<h1 class="link__title multiplayer__title">
+						<p class="link__title multiplayer__title">
 							многопользовательский режим
-						</h1>
+						</p>
 						<p class="link__subtitle multiplayer__subtitle">
 							играйте онлайн с друзьями
 						</p>
@@ -53,9 +53,9 @@
 						<img src="/images/about.png" alt="about" class="link__image">
 					</div>
 					<div class="link__text">
-						<h1 class="link__title about__title">
+						<p class="link__title about__title">
 							про нас
-						</h1>
+						</p>
 						<p class="link__subtitle about__subtitle">
 							узнайте все о славянах
 						</p>
