--- a/templates/multiplayer/game-over-multi.html.twig
+++ b/templates/multiplayer/game-over-multi.html.twig
@@ -31,7 +31,7 @@
 		<div class="results-placeholder">
 			<div class="results">
 				<div class="results__header">
-					<h1 class="results__title">№0</h1>
+					<p class="results__title">№0</p>
 					<div class="results__time">
 						<p class="time__text">Количество Очков</p>
 						<p class="time__value">0</p>
@@ -43,13 +43,13 @@
 		</div>
 		<a class="back__link">
 			<div class="back">
-				<h1 class="back__button">
+				<p class="back__button">
 					сыграть заново
-				</h1>
+				</p>
 			</div>
 		</a>
 		{% include 'mini-profile.html.twig' %}	
 	</div>
 	<script src="/js/game/game_over.js"></script>
-	<script src="/js/menu/mini-profile.js"></script>
+	<script src="/js/mini-profile.js"></script>
 {% endblock %}
