--- a/templates/select_modes/select-classic-mode.html.twig
+++ b/templates/select_modes/select-classic-mode.html.twig
@@ -34,17 +34,17 @@
 		<div class="select">
 			<a href="/select_solo_mode">
 				<div class="back">
-					<h1 class="back__button">
+					<p class="back__button">
 						назад
-					</h1>
+					</p>
 				</div>
 			</a>
 			<div class="links">
 				<div class="link">
 					<div class="link__text">
-						<h1 class="link__title">
+						<p class="link__title">
 							холоп
-						</h1>
+						</p>
 						<p class="link__subtitle">
 							маленький размер поля
 						</p>
@@ -52,9 +52,9 @@
 				</div>
 				<div class="link">
 					<div class="link__text">
-						<h1 class="link__title">
+						<p class="link__title">
 							крестьянин
-						</h1>
+						</p>
 						<p class="link__subtitle">
 							классический размер поля
 						</p>
@@ -62,9 +62,9 @@
 				</div>
 				<div class="link">
 					<div class="link__text">
-						<h1 class="link__title">
+						<p class="link__title">
 							боярин
-						</h1>
+						</p>
 						<p class="link__subtitle">
 							большой размер поля
 						</p>
