--- a/templates/select_modes/select-koop-mode.html.twig
+++ b/templates/select_modes/select-koop-mode.html.twig
@@ -33,17 +33,17 @@
 		<div class="select">
 			<a href="/menu">
 				<div class="back">
-					<h1 class="back__button">
+					<p class="back__button">
 						назад
-					</h1>
+					</p>
 				</div>
 			</a>
 			<div class="links">
 				<a href="/koop" class="link">
 					<div class="link__text">
-						<h1 class="link__title">
+						<p class="link__title">
 							локальная игра
-						</h1>
+						</p>
 						<p class="link__subtitle">
 							сыграйте с другом на одном поле и одном компьютере (коммунизм победил)
 						</p>
@@ -51,9 +51,9 @@
 				</a>
 				<a href="/koop" class="link">
 					<div class="link__text">
-						<h1 class="link__title">
+						<p class="link__title">
 							сетевая игра
-						</h1>
+						</p>
 						<p class="link__subtitle">
 							сыграйте с другом на одном поле и своих компьютерах (капитализм победил)
 						</p>
