--- a/templates/select_modes/select-multiplayer-mode.html.twig
+++ b/templates/select_modes/select-multiplayer-mode.html.twig
@@ -33,9 +33,9 @@
 		<div class="select">
 			<a href="/menu">
 				<div class="back">
-					<h1 class="back__button">
+					<p class="back__button">
 						назад
-					</h1>
+					</p>
 				</div>
 			</a>
 			<div class="links">
@@ -44,9 +44,9 @@
 						<img src="/images/custom.png" alt="custom" class="link__image">
 					</div>
 					<div class="link__text">
-						<h1 class="link__title custom__title">
+						<p class="link__title custom__title">
 							создать лобби
-						</h1>
+						</p>
 						<p class="link__subtitle custom__subtitle">
 							кастомизируй игру и сразись с друзьями
 						</p>
@@ -57,9 +57,9 @@
 						<img src="/images/listing.png" alt="listing" class="link__image">
 					</div>
 					<div class="link__text">
-						<h1 class="link__title listing__title">
+						<p class="link__title listing__title">
 							войти в лобби
-						</h1>
+						</p>
 						<p class="link__subtitle listing__subtitle">сразись с друзьями на их правилах
 						</p>
 					</div>
