--- a/templates/game_modes/blitz.html.twig
+++ b/templates/game_modes/blitz.html.twig
@@ -30,18 +30,15 @@
 			</div>
 			<div class="score-wrapper">
 				<div class="score-value-wrapper">
-					<p class="title-score">счет:
-					</p>
+					<p class="title-score">счет:</p>
 					<p class="game__score">0</p>
 				</div>
 				<div class="score-value-wrapper">
-					<p class="title-level">уровень:
-					</p>
+					<p class="title-level">уровень:</p>
 					<p class="game__level">0</p>
 				</div>
 				<div class="score-value-wrapper">
-					<p class="title-time">время:
-					</p>
+					<p class="title-time">время:</p>
 					<p class="game__time">2:00</p>
 				</div>
 			</div>
