--- a/templates/menu/about.html.twig
+++ b/templates/menu/about.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block title %}
-	multiplayer mode
+	About Us
 {% endblock %}
 {% block style %}
 	<link rel="stylesheet" href="/css/select.css"/>
@@ -14,18 +14,18 @@
 		<div class="select">
 			<a href="/menu">
 				<div class="back">
-					<h1 class="back__button">
+					<p class="back__button">
 						назад
-					</h1>
+					</p>
 				</div>
 			</a>
 			<div class="links">
 				<div class="link">
 					<a href="/profile/Слава">
 						<div class="link__text">
-							<h1 class="link__title">
+							<p class="link__title">
 								ростислав глизерин
-							</h1>
+							</p>
 							<p class="link__subtitle">
 								!!!
 							</p>
@@ -35,9 +35,9 @@
 				<div class="link">
 					<a href="/profile/Иван">
 						<div class="link__text">
-							<h1 class="link__title">
+							<p class="link__title">
 								иван березин
-							</h1>
+							</p>
 							<p class="link__subtitle">
 								???
 							</p>
@@ -47,9 +47,9 @@
 				<div class="link">
 					<a href="/profile/Елисей">
 						<div class="link__text">
-							<h1 class="link__title">
+							<p class="link__title">
 								елисей карамышев
-							</h1>
+							</p>
 							<p class="link__subtitle">
 								???
 							</p>
@@ -59,9 +59,9 @@
 				<div class="link">
 					<a href="/profile/Дима">
 						<div class="link__text">
-							<h1 class="link__title">
+							<p class="link__title">
 								дмитрий беляев
-							</h1>
+							</p>
 							<p class="link__subtitle">
 								???
 							</p>
@@ -71,9 +71,9 @@
 				<div class="link">
 					<a href="/profile/Никита">
 						<div class="link__text">
-							<h1 class="link__title">
+							<p class="link__title">
 								никита дудинов
-							</h1>
+							</p>
 							<p class="link__subtitle">
 								???
 							</p>
