--- a/templates/multiplayer/list_lobby.html.twig
+++ b/templates/multiplayer/list_lobby.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block title %}
-	Menu
+	List Lobby
 {% endblock %}
 {% block style %}
 	<link rel="stylesheet" href="/css/list_lobby.css"/><link rel="stylesheet" href="/css/mini-profile.css"/>
@@ -33,14 +33,14 @@
 			<div class="row">
 				<a href="/select_multiplayer_mode">
 					<div class="back">
-						<h1 class="back__button">
+						<p class="back__button">
 							назад
-						</h1>
+						</p>
 					</div>
 				</a>
-				<div class = "joinn">
-				<input type="string" id="join" class="join" name="join">
-				<button class="join-button">Войти в лобби</button>
+				<div class="joinn">
+					<input type="string" id="join" class="join" name="join">
+					<button class="join-button">Войти в лобби</button>
 				</div>
 			</div>
 		</div>
