--- a/templates/multiplayer/lobby.html.twig
+++ b/templates/multiplayer/lobby.html.twig
@@ -22,8 +22,7 @@
 			</div>
 			<div class="settings">
 				<div class="settings__size">
-					<p class="settings__text">размер поля:
-					</p>
+					<p class="settings__text">размер поля:</p>
 					<div class="setting">
 						<div class="wrapper-setting">
 							<p id="size" class="settings__text-size">крестьянин</p>
@@ -33,8 +32,7 @@
 					</div>
 				</div>
 				<div class="settings__music">
-					<p class="settings__text">музыка:
-					</p>
+					<p class="settings__text">музыка:</p>
 					<div class="setting">
 						<div class="wrapper-setting">
 							<p id="music" class="settings__text-music">лунный вальс</p>
@@ -44,8 +42,7 @@
 					</div>
 				</div>
 				<div class="settings__complexity">
-					<p class="settings__text">сложность:
-					</p>
+					<p class="settings__text">сложность:</p>
 					<div class="setting">
 						<div class="wrapper-setting">
 							<p id="difficulty" class="settings__text-difficulty">средний</p>
@@ -55,8 +52,7 @@
 					</div>
 				</div>
 				<div class="settings__background">
-					<p class="settings__text">задний фон:
-					</p>
+					<p class="settings__text">задний фон:</p>
 					<div class="setting">
 						<div class="wrapper-setting">
 							<p id="bg" class="settings__text-bg">ispring</p>
