--- a/templates/multiplayer/multiplayer.html.twig
+++ b/templates/multiplayer/multiplayer.html.twig
@@ -40,7 +40,7 @@
                     </div>
                 </div>
             </div>
-            <div class="palyers-list">
+            <div class="players-list">
             </div>
         </div>
     </main>
